--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <title>Construcciones y soluciones</title>
 </head>
 
-<body>
+<body class="sidebar-toggled">
 
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
